--- a/DarkEvening.css
+++ b/DarkEvening.css
@@ -351,7 +351,7 @@ a.btn.btn-default.button {
 
 /*?credits*/
 .breadcrumb::after {
-  content: "CSS от Polaris Penumbra (#419566)";
+  content: "CSS by Polaris Penumbra (#419566)";
   position: absolute;
   right: 20%;
   z-index: 100;
