--- a/NightSea.css
+++ b/NightSea.css
@@ -353,7 +353,7 @@ input[type="text"] {
 
 /*?credits*/
 .breadcrumb::after {
-    content: "CSS от Polaris Penumbra (#419566)";
+    content: "CSS by Polaris Penumbra (#419566)";
     position: absolute;
     right: 20%;
     z-index: 100;
