--- a/DarkSpring.css
+++ b/DarkSpring.css
@@ -605,7 +605,7 @@ input#btnChatSend {
 
 /*?credits*/
 .breadcrumb::after {
-    content: "CSS от Polaris Penumbra (#419566)";
+    content: "CSS by Polaris Penumbra (#419566)";
     position: absolute;
     right: 20%;
     z-index: 100;
